@@ -76,6 +76,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #18458: Prevent crashes with newer versions of libedit.  Its readline
+  emulation has changed from 0-based indexing to 1-based like gnu readline.
+  Original patch by Ronald Oussoren.
+
 - Issue #18919: If the close() method of a writer in the sunau or wave module
   failed, second invocation of close() and destructor no more raise an
   exception.
